--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "set NODE_ENV=development&&nodemon server.js",
+        "server:dev": "set NODE_ENV=development&&nodemon server.js",
+        "server:prod": "set NODE_ENV=production&&node server.js"
     },
     "keywords": [],
     "author": "",
