--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.2",
         "cookie-parser": "^1.4.6",
@@ -21,6 +22,7 @@
         "express-socket.io-session": "^1.3.5",
         "mongodb": "^4.4.1",
         "socket-io": "^1.0.0",
-        "socket.io": "^4.4.1"
+        "socket.io": "^4.4.1",
+        "vite": "^2.8.6"
     }
 }
