--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "express-session": "^1.17.2",
         "express-socket.io-session": "^1.3.5",
         "mongodb": "^4.4.1",
+        "passport": "^0.5.2",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-google-oidc": "^0.1.0",
         "socket-io": "^1.0.0",
         "socket.io": "^4.4.1",
         "socket.io-store": "^1.0.0",
