--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "set NODE_ENV=development&&nodemon server.js",
-        "server:dev": "set NODE_ENV=development&&nodemon server.js",
-        "server:prod": "set NODE_ENV=production&&node server.js"
+        "server:prod": "set NODE_ENV=production&&node server.js",
+        "server:dev": "set NODE_ENV=development&&nodemon server.js"
     },
     "keywords": [],
     "author": "",
