--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "axios": "^0.26.1",
+        "axios": "^1.11.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.2",
         "cookie-parser": "^1.4.6",
@@ -22,12 +22,13 @@
         "express-session": "^1.17.2",
         "express-socket.io-session": "^1.3.5",
         "mongodb": "^4.4.1",
-        "passport": "^0.5.2",
+        "mongoose": "^8.17.1",
+        "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-google-oidc": "^0.1.0",
         "socket-io": "^1.0.0",
         "socket.io": "^4.4.1",
         "socket.io-store": "^1.0.0",
-        "vite": "^2.8.6"
+        "vite": "^7.1.2"
     }
 }
