--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://elooseghantous:BvBFnC2K@cluster0.kqskzkf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://elooseghantous:BvBFnC2K@cluster0.kqskzkf.mongodb.net/tasko?retryWrites=true&w=majority&appName=Cluster0
 SESSION_SECRET=somesecret
